# rules_avro

./: .bazelrc  .gitignore  .travis.yml  BUILD  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  maven_install.json  test.sh
.claude/: settings.local.json
.github/workflows/: main.yml
avro/: avro.bzl  extensions.bzl
test/: BUILD
test/src/: User.avdl  User.avsc
