module(
    name = "rules_avro",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "7.12.5")
bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_license", version = "1.0.0")

avro = use_extension("//avro:extensions.bzl", "avro")
use_repo(avro, "avro")
