module(
    name = "rules_avro",
    version = "0.1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_jvm_external", version = "6.5")
bazel_dep(name = "rules_license", version = "1.0.0")

avro = use_extension("//avro:extensions.bzl", "avro")
use_repo(avro, "avro")
